objects/SVMXC__Service_Order_Line__c.object
<CustomObject>
    <fields>
        <fullName>Product_Stock__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Stock</label>
        <referenceTo>SVMXC__Product_Stock__c</referenceTo>
        <relationshipLabel>Work Details</relationshipLabel>
        <relationshipName>Work_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>TEXT(SVMXC__Serial_Number__r.SVMXC__Product__r.SVMXC__Product_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShowMilesDriven__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Display or not Miles Driven in SIR</description>
        <label>Show Miles Driven</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technician_Van_Stock__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stock Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Work Details (Stock Location)</relationshipLabel>
        <relationshipName>Work_Details</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>